--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
 		"@typescript-eslint/eslint-plugin": "^4.26.0",
 		"@typescript-eslint/parser": "^4.26.0",
 		"eslint": "^7.27.0",
-		"typescript": "^4.3.2"
+		"typescript": "^4.3.2",
+		"ansi-regex": ">=5.0.1"
 	},
 	"dependencies": {
 		"@types/node": "^16.9.1"
