--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
 		"moduleResolution": "node",
 		"sourceMap": true,
 		"outDir": "./lib/esm",
-		"declaration": true
+		"declaration": true,
+        "resolveJsonModule" : true,
 	},
 	"lib": ["es2015"],
 	"include": ["./src"]
